// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentDownloadButton should render correct contents for english user 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  background-color: rgb(239,239,243);
  cursor: pointer;
  width: 100%;
  padding: 0 17px;
  margin-top: 8px;
  border-radius: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 3px;
  opacity: 0.4;
}

.c4 {
  font-size: 13px;
  color: var(--color-theme-primary);
}

.c3 {
  display: inline-block;
  margin-left: 12px;
  margin-right: 12px;
  margin-bottom: 2.4px;
  width: 0px;
  border-right: thin solid rgb(151,151,151);
  height: 16px;
}

.c2 {
  font-size: 15px;
  font-weight: 600;
  color: rgb(77,76,76);
}

.c5 {
  font-size: 12px;
  color: rgb(193,193,193);
}

<button
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        english type
      </span>
      <span
        class="c3"
      />
      <div
        class="c4"
      >
        test
      </div>
    </div>
    <span
      class="c5"
    >
      <svg />
    </span>
  </button>
</DocumentFragment>
`;

exports[`AttachmentDownloadButton should render correct contents for korean user 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 50px;
  background-color: rgb(239,239,243);
  cursor: pointer;
  width: 100%;
  padding: 0 17px;
  margin-top: 8px;
  border-radius: 9px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 3px;
  opacity: 0.4;
}

.c4 {
  font-size: 13px;
  color: var(--color-theme-primary);
}

.c3 {
  display: inline-block;
  margin-left: 12px;
  margin-right: 12px;
  margin-bottom: 2.4px;
  width: 0px;
  border-right: thin solid rgb(151,151,151);
  height: 16px;
}

.c2 {
  font-size: 15px;
  font-weight: 600;
  color: rgb(77,76,76);
}

.c5 {
  font-size: 12px;
  color: rgb(193,193,193);
}

<button
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        한글 종류
      </span>
      <span
        class="c3"
      />
      <div
        class="c4"
      >
        test
      </div>
    </div>
    <span
      class="c5"
    >
      <svg />
    </span>
  </button>
</DocumentFragment>
`;
